--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -9,6 +9,7 @@
 
         <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 	    <link rel="stylesheet" href="./styles/style.css">
+        <link rel="stylesheet" href="./styles/material.css">
     </head>
     <body>
 
@@ -369,7 +370,7 @@
     <li>
         <b>@angular/core</b> : 5.2.9</li>
     <li>
-        <b>@angular/flex-layout</b> : 5.0.0-beta.13</li>
+        <b>@angular/flex-layout</b> : 5.0.0-beta.14</li>
     <li>
         <b>@angular/forms</b> : 5.2.9</li>
     <li>
@@ -421,7 +422,7 @@
     <li>
         <b>lodash</b> : 4.17.5</li>
     <li>
-        <b>moment</b> : 2.21.0</li>
+        <b>moment</b> : 2.22.0</li>
     <li>
         <b>mutationobserver-shim</b> : 0.3.2</li>
     <li>
@@ -433,7 +434,7 @@
     <li>
         <b>rxjs</b> : 5.5.8</li>
     <li>
-        <b>zone.js</b> : 0.8.20</li>
+        <b>zone.js</b> : 0.8.25</li>
 </ul>
 
 
