--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+        <link href="https://unpkg.com/angular-calendar@0.26.6/css/angular-calendar.css" rel="stylesheet" />
+        <link href="https://unpkg.com/flatpickr@4.5.2/dist/flatpickr.css" rel="stylesheet" />
     </head>
     <body>
         <sg-app-root></sg-app-root>
